--- a/src/components/GameComponents/Game.module.css
+++ b/src/components/GameComponents/Game.module.css
@@ -16,3 +16,8 @@
     display: flex;
     justify-content: center;
 }
+button {
+    padding: .75rem;
+    border-radius: 25px;
+    background-color: var(--pineGreen);
+}
