--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,11 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
   height: 100%;
+  flex: 1;
 }
