--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -3,7 +3,8 @@
     display: flex;
     justify-content: space-around;
     padding-top: .1rem;
-    position: absolute;
+    position: relative;
+    flex: 0
 }
 
 .nav a {
